# Athena-Framework

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README
config/: CMakeLists.txt  athena.cfg.in  demos.cfg.in  plugins.cfg.in  resources.cfg.in  resources_demos.cfg.in
demos/: CMakeLists.txt
demos/OgreHead/: CMakeLists.txt  MainGameState.cpp  MainGameState.h
demos/osx/: CMakeLists.txt
demos/osx/created_window/: CMakeLists.txt  created_window.cmake
demos/osx/created_window/include/: AppDelegate.h
demos/osx/created_window/resources/: Info.plist  Info.plist.in
demos/osx/created_window/src/: AppDelegate.mm  CMakeLists.txt  main.mm
demos/osx/external_window/: CMakeLists.txt  external_window.cmake
demos/osx/external_window/include/: AppDelegate.h
demos/osx/external_window/resources/: Application.xib  Info.plist  Info.plist.in
demos/osx/external_window/src/: AppDelegate.mm  CMakeLists.txt
dependencies/: CMakeLists.txt
include/: CMakeLists.txt
include/Athena/: CMakeLists.txt  Config.h.in  Configuration.h  Engine.h  Prerequisites.h
include/Athena/GameStates/: GameStateManager.h  IGameState.h
include/Athena/Tasks/: GameStateStackTask.h  GameStateTask.h  GraphicsTask.h  InputsTask.h  PhysicsTask.h  Task.h  TaskEnd.h  TaskManager.h  TaskStart.h
scripting/: CMakeLists.txt  module.cpp  time.cpp
src/: CMakeLists.txt  Configuration.cpp  Engine.cpp  module.cpp.in
src/GameStates/: GameStateManager.cpp
src/Tasks/: GameStateStackTask.cpp  GameStateTask.cpp  GraphicsTask.cpp  InputsTask.cpp  PhysicsTask.cpp  TaskEnd.cpp  TaskManager.cpp  TaskStart.cpp
unittests/Athena/: CMakeLists.txt  test_GameStateManager.cpp  test_TaskManager.cpp
unittests/Athena/mocks/: GameState.h  Task.h  mocks.cpp
